tests/toylang/neg/000911_mutation.toylang
program a = { if do a then sleep; } .
